# Chat-App

./: LICENSE  README.md  package-lock.json
.github/ISSUE_TEMPLATE/: bug_report.md
Fiddle Chat App/: index.html  package-lock.json  package.json  splashscreen.html  vite.config.ts
Fiddle Chat App src files(macos & linux)/: package.json
Fiddle Chat App src files(macos & linux)/src/: App.css  App.jsx  firebase.js
Fiddle Chat App src files(macos & linux)/src-tauri/: tauri.conf.json
Fiddle Chat App src files(macos & linux)/src/components/: MsgNavBar.jsx  Requests.jsx  SMNavbar.jsx
Fiddle Chat App src files(macos & linux)/src/projectAssets/: index.js
Fiddle Chat App src files(macos & linux)/src/styles/: Room.scss  Settings.scss
Fiddle Chat App src files(windows-os)/: package-lock.json
Fiddle Chat App src files(windows-os)/src/: App.jsx  firebase.js  style.css
Fiddle Chat App src files(windows-os)/src-tauri/: tauri.conf.json
Fiddle Chat App src files(windows-os)/src-tauri/icons/: icon.icns
Fiddle Chat App src files(windows-os)/src/components/: Settings.jsx
Fiddle Chat App src files(windows-os)/src/contexts/: AccessDB.js
Fiddle Chat App src files(windows-os)/src/styles/: ConstContent.scss  Messages.scss  Room.scss  SmallComp.scss  _constantMixins.scss
Fiddle Chat App src files/src/: App.css
Fiddle Chat App src files/src-tauri/: Cargo.toml
Fiddle Chat App src files/src/components/: JoinRoom.jsx  Login.jsx  Messages.jsx  Room.jsx
Fiddle Chat App/src/: App.css  App.tsx  AppFrame.tsx  AppFrameless.tsx  firebase.ts  main.tsx
Fiddle Chat App/src-tauri/: Cargo.toml  tauri-frameless.txt  tauri-noframe.txt  tauri.conf.json  tauriconfijson.txt
Fiddle Chat App/src-tauri/icons/: icon.icns
Fiddle Chat App/src-tauri/src/: main.rs
Source files/: App.css  App.tsx  firebase.js  index.ejs  index.tsx  winMan.js
Source files/components/: AddFriend.jsx  Chats.jsx  MsgNavBar.jsx  Room.jsx  SMNavbar.jsx
Source files/contexts/: Authcontext.js
Source files/styles/: ConstContent.scss  Login.scss  Room.scss  Settings.scss
renderer/: main.ts
(+63 files in other folders)
