[package]
name = "fiddle-chat-app"
version = "0.3.2"
description = "A real time chat application that allows users to chat with each other through private messages and rooms"
authors = ["waveyboym"]
license = ""
repository = "https://github.com/waveyboym/Chat-App"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "http-all", "window-start-dragging", "window-hide", "window-maximize", "window-minimize", "window-close", "window-unminimize", "window-show", "window-unmaximize", "os-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth", branch = "main" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
